2007-01-04  Naba Kumar  <naba@gnome.org>

	Patches from  Maik Beckmann and Sébastien Granjoux:
	* plugins/profile-default/plugin.c,
	plugins/project-manager/plugin.c: Unescape project name. Fixes
	Bug #357151

2007-01-04  Naba Kumar  <naba@gnome.org>

	* plugins/glade/plugin.c: Fixed compilation with
	older glade-3 version.
	
	Patch from Roland Illig:
	libanjuta/anjuta-children.c, libanjuta/anjuta-launcher.c,
	plugins/sourceview/anjuta-document-saver.c,
	plugins/terminal/terminal.c, src/main.c: Fixed Bug 392699 Some patches
	are necessary to build anjuta on NetBSD 3.0

	Patch from Sebastien Granjoux <seb.sfo@free.fr>:
	* src/anjuta-app.c: Fixed Bug #377767 – resize crashes
	window manager in gnome.
	
2007-01-02  Naba Kumar  <naba@gnome.org>
	
	* plugins/glade/plugin.c: Make it work with glade-3 svn.
	
2006-12-31 Sebastien Granjoux <seb.sfo@free.fr>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* libanjuta/interfaces/libanjuta.idl,
	plugins/debug-manager/Makefile.am,
	plugins/debug-manager/anjuta-marshal.list,
	plugins/debug-manager/debugger.c,
	plugins/debug-manager/sparse_buffer.c,
	plugins/debug-manager/sparse_buffer.h,
	plugins/debug-manager/sparse_view.c,
	plugins/debug-manager/sparse_view.h,
	plugins/debug-manager/disassemble.h,
	plugins/debug-manager/disassemble.c,
	plugins/debug-manager/anjuta-marshal.list,
	plugins/debug-manager/plugin.c,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h,
	plugins/gdb/plugin.c:
	Add a disassembly view window

	* plugins/debug-manager/breakpoints.c,
	plugins/debug-manager/chunk_view.c,
	plugins/debug-manager/locals.c,
	plugins/debug-manager/memory.c,
	plugins/debug-manager/registers.c,
	plugins/debug-manager/stack_trace.c:
	Add some debugging information 

2006-12-18  Naba Kumar  <naba@gnome.org>

	* configure.in, plugins/glade/plugin.c: Allow building against both
	glade == 3.0.2 and glade > 3.0.2 (~ cvs).

2006-12-03  Naba Kumar  <naba@gnome.org>
	
	* TODO.tasks: Marked a bounty completed.
